--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,16 @@ body{
 }
 .container{
     display:flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: row;
     background-color: rgb(49, 46, 43);
-    margin:5vw 5vw 0 5vw;
+    margin-top:2rem;
+    margin-left:5rem;
+    margin-right:5rem;
+    margin-bottom:3rem;
     height:100%;
     border-radius: 10px 50px;
-    justify-content: space-between;
+    justify-content: space-around;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     border-radius: 1rem;
@@ -24,19 +27,25 @@ body{
 .h1{
     display:flex;
     color:rgb(49, 46, 43);
-    height:15vh;
+    height:5rem;
     background-color:#dad7d5;
     border-radius:1.5rem 1.5rem 0 0;
     justify-content: center;
     align-items: center;
+    font-size:2rem;
+}
+.h1 center{
+    font-size:0.5rem;
 }
 .d1{
     padding:5%;
+    height:25vh;
+    font-size:1rem;
 }
 .classic{
     box-sizing: border-box;
     background-color: white;
-    width:33%;
+    width:25%;
     box-sizing: border-box;
     border-radius:1.5vw;
     box-shadow:0 5px grey;
@@ -44,31 +53,28 @@ body{
 .gold{
     box-sizing: border-box;
     background-color: white;
-    width:33%;
+    width:25%;
     box-sizing: border-box;
     border-radius: 2rem;
     box-shadow:0 5px grey;
 }
 .platinum{
     box-sizing: border-box;
-    background-color:turquoise;
-    width:33%;
+    background-color:#0096c6;
+    width:25%;
     box-sizing: border-box;
     border-radius: 2rem;
-    box-shadow:0 5px grey;
+    box-shadow:0 5px lightseagreen;
     color:white;
-    line-height: 2rem;
 }
 .platinum .h1{
-    background-color:darkturquoise;
+    background-color:#007ba2;
     color:white;
 }
 .platinum .buttn a{
-    box-shadow:0.5rem 0.5rem orangered;
-    background-color: darkorange;
+    box-shadow:2px 2px #cd8026;
+    background-color:darkorange;
     color:white;
-    height:7vh;
-    
 }
 .platinum .buttn a:hover{
     background-color:orange;
@@ -78,10 +84,11 @@ ul{
     list-style-position: inside;
 }
 .buttn{
+    margin-bottom: 3rem;
+    margin-top:2rem;
     display:flex;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-align:center;
-    margin:2rem 5rem 2rem 5rem;
     box-sizing:border-box;
     width:fit-content;
     justify-content: center;
@@ -90,28 +97,36 @@ ul{
 .buttn a{
     text-decoration: none;
     padding:0 2rem 0 2rem;
-    border-radius:3rem;
+    border-radius:1rem;
     color:darkslategray;
-    box-shadow: 0.5rem 0.5rem 0.2rem grey;
+    box-shadow: 0.2rem 0.2rem 0.2rem #bdbcb8;
+    width:10rem;
+    height:3rem;
 }
 .buttn a:hover{
-    background-color:#d1d1d1;
+    background-color:#e7e6e4;
 }
-
+.foot{
+    margin-bottom:2rem;
+}
 @media screen and (max-width: 900px) {
     .container{
         flex-direction: column;
         font-size:2rem;
     }
     .classic{
-        width:100%;
+        align-self: center;
+        width:80vh;
         margin-bottom:3rem;
     }
     .gold{
-        width:100%;
+        align-self: center;
+        width:80vh;
         margin-bottom:3rem;
     }
     .platinum{
-        width:100%;
+        align-self: center;
+        width:80vh;
+        margin-bottom:3rem;
     }
 }
