--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,9 @@ body{
     background-color: white;
     width:25%;
     box-sizing: border-box;
-    border-radius:1.5vw;
+    border-radius:2rem;
     box-shadow:0 5px grey;
+    height:80vh;
 }
 .gold{
     box-sizing: border-box;
@@ -57,6 +58,7 @@ body{
     box-sizing: border-box;
     border-radius: 2rem;
     box-shadow:0 5px grey;
+    height:80vh;
 }
 .platinum{
     box-sizing: border-box;
@@ -66,6 +68,7 @@ body{
     border-radius: 2rem;
     box-shadow:0 5px lightseagreen;
     color:white;
+    height:80vh;
 }
 .platinum .h1{
     background-color:#007ba2;
@@ -84,8 +87,7 @@ ul{
     list-style-position: inside;
 }
 .buttn{
-    margin-bottom: 3rem;
-    margin-top:2rem;
+    margin-top:8vh;
     display:flex;
     font-size: 1.5rem;
     text-align:center;
@@ -109,24 +111,42 @@ ul{
 .foot{
     margin-bottom:2rem;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1090px) {
     .container{
         flex-direction: column;
-        font-size:2rem;
+        font-size:1.5rem;
+        height:auto;
     }
     .classic{
-        align-self: center;
-        width:80vh;
+        width:70vw;
         margin-bottom:3rem;
+        height:auto;
+        align-self:center;
     }
     .gold{
-        align-self: center;
-        width:80vh;
+        width:70vw;
         margin-bottom:3rem;
+        height:auto;
+        align-self:center;
     }
     .platinum{
-        align-self: center;
-        width:80vh;
-        margin-bottom:3rem;
+        width:70vw;
+        height:auto;
+        align-self:center;
+    }
+    .buttn{
+        margin-bottom:2rem;
+    }
+}
+
+@media screen and (max-width:400px){
+    .classic{
+        width:fit-content;
+    }
+    .gold{
+        width:fit-content;
+    }
+    .platinum{
+        width:fit-content;
     }
 }
